[Fix] Various start screen layout fixes
- Startscreen: Changelog layout is broken
- Startscreen: Credits layout is broken
- https://trello.com/c/I46xhp8G/96-messed-up-layout-of-highscore-tables

--- a/frontend/src/less/highScores.less
+++ b/frontend/src/less/highScores.less
@@ -267,6 +267,7 @@
   > .tableContainer {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
 
     margin-bottom: auto; // push social media container to the bottom
 
