--- a/frontend/src/less/startScreen.less
+++ b/frontend/src/less/startScreen.less
@@ -311,6 +311,10 @@
 			display: none;
 		}
 
+		> .panelContent {
+			flex: 1 1 100%;
+		}
+
 		.simplebar-scrollbar:before {
 			background-color: white;
 		}
